Listar Capitanes en registro Pedidos; se crea clase "constantes".

--- a/web/app/administrador/calificaciones/listar.xhtml
+++ b/web/app/administrador/calificaciones/listar.xhtml
@@ -5,12 +5,223 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:jsf="http://xmlns.jcp.org/jsf">
+
+    <ui:composition template="/WEB-INF/template/template.xhtml">
+        <ui:define name="contenido">
+            <div class="content-wrapper">
+                <section class="content-header">
+                    <h1>
+                        Historial de Calificaciones
+                        <small>Genesis Gourmet</small>
+                    </h1>
+                    <ol class="breadcrumb">
+                        <li><a href="#{request.contextPath}/app/home.xhtml"><i class="fa fa-home"></i> Inicio</a></li>
+                        <li class="active">Ver Calificaciones</li>
+                    </ol>
+                </section>
+                <b:message for="listar-calificaciones" showSummary="true" show-detail="true"/>
+                <h:form id="listar-calificaciones" prependId="false">
+                    <section class="content">
+
+                        <div class="box">
+                            <div class="box-header">
+                                <h3 class="box-title">Ver Calificaciones</h3>
+                            </div>
+                            <!-- /.box-header -->
+                            <div class="box-body">
+                                <table id="example1" class="table table-bordered table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>IdCalificacion</th>
+                                            <th>Mesero</th>
+                                            <th>Descripcion</th>  
+                                            <th>Fecha</th>
+                                            <th></th>
+
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <c:forEach items="#{listarCalificacionController.calificaciones}" var="c">
+                                            <tr>
+                                                <td>#{c.idcalificacion}</td>
+                                                <td><h:outputText value="#{c.cedulaMesero}"/></td>
+                                                <td><h:outputText value="#{c.descripcion}"/></td>
+                                                <td><h:outputText value="#{c.fecha}"/></td>
+                                                <td>
+                                                    <!--<h:commandLink class="fa fa-eye btn btn-primary btn-sm"  value="" />-->
+                                                    <button type="button" class="btn btn-primary btn-sm fa fa-eye" data-toggle="modal" data-target="#modalSee"
+                                                            jsf:actionListener="#{verCalificacionController.setCalificacion(c)}">
+                                                        <f:ajax event="click" render="info-modal-see"/>
+                                                    </button>
+                                                    <button type="button" class="btn btn-warning btn-sm fa fa-pencil" data-toggle="modal" data-target="#modalEdit"
+                                                            jsf:actionListener="#{modificarCalificacionController.setCalificacionSeleccionado(c)}">
+                                                        <f:ajax event="click" render="info-modal-update"/>
+                                                    </button>
+
+                                                    <button type="button" class="btn btn-danger btn-sm fa fa-trash-o" data-toggle="modal" data-target="#myModal"
+                                                            jsf:actionListener="#{listarCalificacionController.setCalificacionSeleccionado(c)}">
+                                                        <f:ajax event="click" render="info-modal-delete"/>
+                                                    </button>
+                                                </td>
+
+                                            </tr>
+                                        </c:forEach>
+                                    </tbody>
+                                    <!--Inicio modal eliminar-->
+                                    <div id="myModal" class="modal fade" role="dialog">
+                                        <div class="modal-dialog">
+
+
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close fa fa-close" data-dismiss="modal"></button>
+                                                    <h4 class="modal-title">Eliminar Calificacion</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <h:panelGroup id="info-modal-delete" layout="block">
+                                                        <p>¿Está seguro de eliminar la Calificacion #{listarCalificacionController.calificacionSeleccionado.idcalificacion} ?</p>
+                                                    </h:panelGroup>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <h:commandButton class="btn btn-danger" value="Eliminar" actionListener="#{listarCalificacionController.eliminarCalificacion()}"/>
+                                                    <!--<button type="button" class="btn btn-default" data-dismiss="modal" >Close</button>-->
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <!--Fin modal eliminar-->
+                                    <!--Inicio modal actualizar-->
+                                    <div id="modalEdit" class="modal fade" role="dialog">
+                                        <div class="modal-dialog">
+
+
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close fa fa-close" data-dismiss="modal"></button>
+                                                    <h4 class="modal-title">Actualización de datos</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <h:panelGroup id="info-modal-update" layout="block">
+                                                        <h:form class="form-horizontal" id="form-registro">
+                                                            <div class="box-body">
+
+
+                                                                <div class="form-group">
+                                                                    <label for="idCalificacion" class="col-sm-2 control-label">idCalificacion</label>
+
+                                                                    <div class="col-sm-10">
+                                                                        <h:inputText  class="form-control" id="idCalificacion" a:placeholder="Calificacion" value="#{modificarCalificacionController.calificacionSeleccionado.idcalificacion}"/>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="form-group">
+                                                                    <label for="tipopro" class="col-sm-2 control-label">Tipo de Calificacion</label>
+                                                                    <div class="col-sm-10">
+                                                                        <b:selectOneMenu value="#{registroCalificacionController.nuevaCalificacion.cedulaMesero}">
+                                                                            <f:selectItems value="#{calificacionController.usuarios}" var="tp" itemLabel="#{tp.cedula}">
+                                                                                <h:outputText value="#{tp.cedula}"/>
+                                                                            </f:selectItems>
+                                                                        </b:selectOneMenu>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="form-group">
+                                                                    <label for="descripcion" class="col-sm-2 control-label">Descripcion</label>
+
+                                                                    <div class="col-sm-10">
+                                                                        <h:inputTextarea class="form-control" id="descripcion" a:placeholder="Descripcion" value="#{modificarCalificacionController.calificacionSeleccionado.descripcion}"/>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="form-group">
+                                                                    <label for="fecha" class="col-sm-2 control-label">fecha</label>
+
+                                                                    <div class="col-sm-10">
+                                                                        <h:inputText a:type="date" class="form-control" id="fecha" a:placeholder="Fecha" value="#{modificarCalificacionController.calificacionSeleccionado.fecha}"/>
+                                                                    </div>
+                                                                </div>
+
+                                                                <!-- /.box-body -->
+                                                            </div>
+                                                                <!-- /.box-footer -->
+                                                        </h:form>
+                                                    </h:panelGroup>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <h:commandButton class="btn btn-info btn btn-block" value="Actualizar" actionListener="#{modificarCalificacionController.actulaizarDatos()}"/>
+                                                    <!--<button type="button" class="btn btn-default" data-dismiss="modal" >Close</button>-->
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <!--Fin modal actualizar-->
+                                    <!--Inicio modal ver-->
+                                    <div id="modalSee" class="modal fade" role="dialog">
+                                        <div class="modal-dialog">
+
+
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close fa fa-close" data-dismiss="modal"></button>
+                                                    <h4 class="modal-title">Datos de calificaciones</h4>
+                                                </div>
+                                                <div class="modal-bod">
+                                                    <h:panelGroup id="info-modal-see" layout="block">
+                                                        <b:panelGrid colSm="12" columns="2">
+                                                            <h:outputText style="font-weight: bold;" value="IdCalificacion:"/>
+                                                            <h:outputText value="#{verCalificacionController.calificacion.idcalificacion}"/>
+                                                            <h:outputText style="font-weight: bold;" value="Cedula Mesero:"/>
+                                                            <h:outputText value="#{verCalificacionController.calificacion.cedulaMesero}"/>
+                                                            <h:outputText style="font-weight: bold;" value="Descripcion:"/>
+                                                            <h:outputText value="#{verCalificacionController.calificacion.descripcion}"/>
+                                                            <h:outputText style="font-weight: bold;" value="Fecha:"/>
+                                                            <h:outputText value="#{verCalificacionController.calificacion.fecha}"/>
+                                                            
+                                                        </b:panelGrid>
+                                                    </h:panelGroup>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-info" data-dismiss="modal" >Aceptar</button>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <!--Fin modal ver-->
+                                </table>
+                            </div>
+                            <!-- /.box-body -->
+                        </div>
+
+                    </section>
+
+                </h:form>
+            </div>
+            <script>
+                $(function () {
+                    $("#example1").DataTable();
+                    $('#example2').DataTable({
+                        "paging": true,
+                        "lengthChange": false,
+                        "searching": false,
+                        "ordering": true,
+                        "info": true,
+                        "autoWidth": false
+                    });
+                });
+            </script>
+
+        </ui:define>
+    </ui:composition>
+
 </html>
