--- a/web/app/administrador/mesas/registrar.xhtml
+++ b/web/app/administrador/mesas/registrar.xhtml
@@ -5,12 +5,75 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+
+    <ui:composition template="/WEB-INF/template/template.xhtml">
+        <ui:define name="contenido">
+            <div class="content-wrapper">
+                <section class="content-header">
+                    <h1>
+                        Mesas
+                        <small>Genesis Gourmet</small>
+                    </h1>
+                    <ol class="breadcrumb">
+                        <li><a href="#"><i class="fa fa-home"></i> Inicio</a></li>
+                        <li class="active">Registrar Mesas</li>
+                    </ol>
+                </section>
+
+                <section class="content">
+                    <div class="col-md-8">
+                        <!-- Horizontal Form -->
+                        <div class="box box-info" style="margin-left: 180px;">
+                            <div class="box-header with-border">
+                                <h3 class="box-title">Registrar Mesas</h3>
+                            </div>
+                            <!-- /.box-header -->
+                            <!-- form start -->
+                            <b:message for="form-registro" showSummary="true" show-detail="true"/>
+                            <h:form class="form-horizontal" id="form-registro">
+                                <div class="box-body">
+
+                                    <div class="form-group">
+                                        <label for="idAmbiente" class="col-sm-2 control-label">Id Ambiente</label>
+                                        <div class="col-sm-10">
+                                                <b:selectOneMenu value="#{registroMesaController.nuevaMesa.idAmbiente}">
+                                                <f:selectItems value="#{ambienteController.amientes}" var="a" itemLabel="#{a.nombre}"/>
+                                            </b:selectOneMenu>
+                                        </div>
+                                    </div>
+                                    
+<!--                                    <div class="form-group">
+                                        <label for="Estado Mesa" class="col-sm-2 control-label">Estado Mesa</label>
+                                        <div class="col-sm-10">
+                                            <b:selectOneMenu value="">
+                                                <f:selectItems value="" var="" itemLabel=""/>
+                                            </b:selectOneMenu>
+                                        </div>
+                                    </div>-->
+
+                                </div>
+                                <!-- /.box-body -->
+                                <div class="box-footer">                                  
+                                    <h:commandButton type="submit" class="btn btn-info pull-right" value="Guardar" action="#{registroMesaController.registrar()}"/>
+                                </div>
+                                <!-- /.box-footer -->
+                            </h:form>
+                        </div>
+
+                        <!-- /.box -->
+                    </div>
+
+                </section>
+            </div>
+
+        </ui:define>
+    </ui:composition>
+
 </html>
+    
