--- a/web/app/administrador/productos/listar.xhtml
+++ b/web/app/administrador/productos/listar.xhtml
@@ -26,11 +26,11 @@ and open the template in the editor.
                         <li><a href="#{request.contextPath}/app/home.xhtml"><i class="fa fa-home"></i> Inicio</a></li>
                         <li class="active">Ver Productos</li>
                     </ol>
+                    <a href="#{request.contextPath}/app/administrador/tipoPoductos/listar.xhtml"><i class="fa fa-list"></i> Gestin de Tipos de Productos</a>
                 </section>
                 <b:message for="listar-productos" showSummary="true" show-detail="true"/>
                 <h:form id="listar-productos" prependId="false">
                     <section class="content">
-
                         <div class="box">
                             <div class="box-header">
                                 <h3 class="box-title">Ver Productos</h3>
@@ -44,7 +44,6 @@ and open the template in the editor.
                                             <th>Nombre</th>
                                             <th>Precio</th>  
                                             <th>Tipo Producto</th>
-                                            <th>Cantidad</th>
                                             <th></th>
 
                                         </tr>
@@ -56,7 +55,6 @@ and open the template in the editor.
                                                 <td><h:outputText value="#{p.nombre}"/></td>
                                                 <td><h:outputText value="#{p.precio}"/></td>
                                                 <td><h:outputText value="#{p.idTipoProducto.descripcion}"/></td>
-                                                <td><h:outputText value="#{p.cantidad}"/></td>
                                                 <td>
                                                     <!--<h:commandLink class="fa fa-eye btn btn-primary btn-sm"  value="" />-->
                                                     <button type="button" class="btn btn-primary btn-sm fa fa-eye" data-toggle="modal" data-target="#modalSee"
@@ -102,79 +100,8 @@ and open the template in the editor.
                                     </div>
                                     <!--Fin modal eliminar-->
                                     <!--Inicio modal actualizar-->
-                                    <div id="modalEdit" class="modal fade" role="dialog">
-                                        <div class="modal-dialog">
 
 
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close fa fa-close" data-dismiss="modal"></button>
-                                                    <h4 class="modal-title">Actualización de datos</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <h:panelGroup id="info-modal-update" layout="block">
-                                                        <h:form class="form-horizontal" id="form-registro">
-                                                            <div class="box-body">
-
-
-                                                                <div class="form-group">
-                                                                    <label for="idProducto" class="col-sm-2 control-label">idProducto</label>
-
-                                                                    <div class="col-sm-10">
-                                                                        <h:inputText  class="form-control" id="idProducto" a:placeholder="Producto" value="#{modificarProductoController.productoSeleccionado.idProducto}"/>
-                                                                    </div>
-                                                                </div>
-
-                                                                <div class="form-group">
-                                                                    <label for="nombre" class="col-sm-2 control-label">Nombre</label>
-
-                                                                    <div class="col-sm-10">
-                                                                        <h:inputText class="form-control" id="nombre" a:placeholder="Nombre" value="#{modificarProductoController.productoSeleccionado.nombre}"/>
-                                                                    </div>
-                                                                </div>
-
-                                                                <div class="form-group">
-                                                                    <label for="precio" class="col-sm-2 control-label">Precio</label>
-
-                                                                    <div class="col-sm-10">
-                                                                        <h:inputText  class="form-control" id="precio" a:placeholder="Precio" value="#{modificarProductoController.productoSeleccionado.precio}"/>
-                                                                    </div>
-                                                                </div>
-
-
-                                                                <div class="form-group">
-                                                                    <label for="tipopro" class="col-sm-2 control-label">Tipo de Producto</label>
-                                                                    <div class="col-sm-10">
-                                                                        <b:selectOneMenu value="#{registroPedidoController.nuevoProducto.idTipoProducto}">
-                                                                            <!--Tipos de documentos -->
-                                                                            <f:selectItems value="#{tipoProductoController.tiposProductos}" var="tp" itemLabel="#{tp.descripcion}"/>
-                                                                        </b:selectOneMenu>
-                                                                    </div>
-                                                                </div>
-
-                                                                <div class="form-group">
-                                                                    <label for="cantidad" class="col-sm-2 control-label">Cantidad</label>
-
-                                                                    <div class="col-sm-10">
-                                                                        <h:inputText class="form-control" id="cantidad" a:placeholder="Cantidad" value="#{modificarProductoController.productoSeleccionado.cantidad}"/>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                            <!-- /.box-body -->
-
-                                                            <!-- /.box-footer -->
-                                                        </h:form>
-                                                    </h:panelGroup>
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <h:commandButton class="btn btn-info btn btn-block" value="Actualizar" actionListener="#{modificarProductoController.actulaizarDatos()}"/>
-                                                    <!--<button type="button" class="btn btn-default" data-dismiss="modal" >Close</button>-->
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                    <!--Fin modal actualizar-->
                                     <!--Inicio modal ver-->
                                     <div id="modalSee" class="modal fade" role="dialog">
                                         <div class="modal-dialog">
@@ -196,8 +123,6 @@ and open the template in the editor.
                                                             <h:outputText value="#{verProductoController.producto.nombre}"/>
                                                             <h:outputText style="font-weight: bold;" value="Precio:"/>
                                                             <h:outputText value="#{verUsuarioController.usuario.primerApellido} #{verUsuarioController.usuario.segundoApellido}"/>
-                                                            <h:outputText style="font-weight: bold;" value="Cantidad:"/>
-                                                            <h:outputText value="#{verProductoController.producto.cantidad}"/>
                                                         </b:panelGrid>
                                                     </h:panelGroup>
                                                 </div>
@@ -218,6 +143,64 @@ and open the template in the editor.
 
                 </h:form>
             </div>
+                                    <div id="modalEdit" class="modal fade" role="dialog">
+                                        <div class="modal-dialog">
+
+
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close fa fa-close" data-dismiss="modal"></button>
+                                                    <h4 class="modal-title">Actualización de datos</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <h:panelGroup id="info-modal-update" layout="block">
+                                                        <b:message for="editar-productos" showSummary="true" show-detail="true"/>
+                                                        <h:form class="form-horizontal" id="editar-productos" prependId="false">
+                                                            <div class="box-body">
+
+                                                                <div class="form-group">
+                                                                    <label for="nombre" class="col-sm-2 control-label">Nombre</label>
+
+                                                                    <div class="col-sm-10">
+                                                                        <h:inputText class="form-control" id="nombre" a:placeholder="Nombre" value="#{modificarProductoController.productoSeleccionado.nombre}"/>
+                                                                    </div>
+                                                                </div>
+
+                                                                <div class="form-group">
+                                                                    <label for="precio" class="col-sm-2 control-label">Precio</label>
+
+                                                                    <div class="col-sm-10">
+                                                                        <h:inputText  class="form-control" id="precio" a:placeholder="Precio" value="#{modificarProductoController.productoSeleccionado.precio}"/>
+                                                                    </div>
+                                                                </div>
+
+
+                                                                <div class="form-group">
+                                                                    <label for="tipopro" class="col-sm-2 control-label">Tipo de Producto</label>
+                                                                    <div class="col-sm-10">
+                                                                        <b:selectOneMenu value="#{registroProductoController.nuevoProducto.idTipoProducto}">
+                                                                            <!--Tipos de documentos -->
+                                                                            <f:selectItems value="#{tipoProductoController.tiposProductos}" var="tp" itemLabel="#{tp.descripcion}"/>
+                                                                        </b:selectOneMenu>
+                                                                    </div>
+                                                                </div>
+
+                                                            </div>
+                                                            <!-- /.box-body -->
+
+                                                            <!-- /.box-footer -->
+                                                            <div class="modal-footer">
+                                                                <h:commandButton class="btn btn-info btn btn-block" value="Actualizar" actionListener="#{modificarProductoController.actulaizarDatos()}"/>
+                                                                <!--<button type="button" class="btn btn-default" data-dismiss="modal" >Close</button>-->
+                                                            </div>
+                                                        </h:form>
+                                                    </h:panelGroup>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <!--Fin modal actualizar-->
             <script>
                 $(function () {
                     $("#example1").DataTable();
